Bug 272115 - KMail system tray icon flickers in and out of existence when there's unread mail
Summary: KMail system tray icon flickers in and out of existence when there's unread mail
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.95
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 276395 277911 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-01 01:41 UTC by Leon Maurer
Modified: 2012-06-25 15:23 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leon Maurer 2011-05-01 01:41:11 UTC
Version:           4.6 beta4 (using KDE 4.6.2) 
OS:                Linux

(This is really for Kontact 4.5.95, which I think is 4.6 beta5, but I didn't
see that listed in the "Application Version" pulldown menu.)

I have the "Only show KMail in system tray if there are unread messages" option selected in KMail's preferences, and when there's unread mail, the system tray icon will appear. However, it will briefly disappear then reappear about once a second, causing the icon to flicker. In fact, it causes much of the system tray and many of the other widgets to flicker as well since they system tray shrinks when the KMail icon goes away, and the other widgets momentarily get resized to fill the other space.

Reproducible: Always
Comment 1 Leon Maurer 2011-05-01 16:06:18 UTC
Its a day later and the flickering has stopped. In fact, all of Kontact seems a bit snappier (it was kind of sluggish previously). I don't know why it has changed. I'll see if the flickering returns.
Comment 2 Leon Maurer 2011-05-02 00:11:52 UTC
It's back to flickering. Oh well.
Comment 3 Christophe Marin 2011-06-24 16:00:17 UTC
*** Bug 276395 has been marked as a duplicate of this bug. ***
Comment 4 Raphael Kubo da Costa 2011-06-24 17:30:06 UTC
Confirming.

From bug 276395: it also happens when the icon is set to be always shown. And it happens whenever something which changes the number of unread mail happens (collection being synced, email being read etc).
Comment 5 Raphael Kubo da Costa 2011-06-25 17:36:25 UTC
Sorry, after checking my settings again it turns out that my systray icon was also set to be shown only when there's unread mail. When I set it to be always shown, the bug does not occur.
Comment 6 Christophe Marin 2011-07-16 19:26:29 UTC
*** Bug 277911 has been marked as a duplicate of this bug. ***
Comment 7 Ilia K. 2011-10-09 14:58:09 UTC
I experience this with KMail 4.7.1. The icon is setup to appear only when there are unread messages, but there are always more than 10 unread messages in my mailboxes (I use several IMAP accounts), so it should never try to disappear. Despite this, sometimes it flickers as mentioned above. I don't know what exactly triggers the flicker.
Comment 8 Diego 2011-12-06 21:39:24 UTC
Happened the same to me when I deleted ~20 messages from an IMAP: stopped when the IMAP account synced the deletion with the server.
Comment 9 Szokovacs Robert 2012-05-10 09:48:48 UTC
Still there with 4.8.3.
Comment 10 Laurent Montel 2012-06-25 15:22:27 UTC
Git commit b3a99c590be02a1ce32aa8760c83162f6dfbd0db by Montel Laurent.
Committed on 25/06/2012 at 17:21.
Pushed by mlaurent into branch 'master'.

Fix Bug 272115 - KMail system tray icon flickers in and out of existence

when there's unread mail
FIXED-IN: 4.8.5

M  +6    -7    kmail/kmsystemtray.cpp

http://commits.kde.org/kdepim/b3a99c590be02a1ce32aa8760c83162f6dfbd0db
Comment 11 Laurent Montel 2012-06-25 15:23:34 UTC
Git commit f594bc368cb5f7fdd2d4991ea137b074c9d5704c by Montel Laurent.
Committed on 25/06/2012 at 17:21.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 272115 - KMail system tray icon flickers in and out of existence

when there's unread mail
FIXED-IN: 4.8.5
(cherry picked from commit b3a99c590be02a1ce32aa8760c83162f6dfbd0db)

M  +6    -7    kmail/kmsystemtray.cpp

http://commits.kde.org/kdepim/f594bc368cb5f7fdd2d4991ea137b074c9d5704c