Fix Bug 272115 - KMail system tray icon flickers in and out of existence

when there's unread mail
BUG: 272115
FIXED-IN: 4.8.5